src/plugins/snapshots/burrow__plugins__looking__tests__it_fails_to_look_inside_non_containers.snap
---
source: src/plugins/looking.rs
expression: reply.to_json()?
---
{
  "simpleReply": "impossible"
}
