src/plugins/snapshots/burrow__plugins__looking__tests__it_looks_in_area_with_items_on_ground.snap
---
source: src/plugins/looking.rs
expression: reply.to_json()?
---
{
  "areaObservation": {
    "area": {
      "desc": null,
      "key": "E-2",
      "name": "Welcome Area",
      "qualified": "a Welcome Area"
    },
    "carrying": [],
    "items": [
      {
        "desc": null,
        "key": "E-3",
        "name": "Cool Rake",
        "qualified": "a Cool Rake"
      },
      {
        "desc": null,
        "key": "E-4",
        "name": "Boring Shovel",
        "qualified": "a Boring Shovel"
      }
    ],
    "living": [
      {
        "desc": null,
        "key": "E-1",
        "name": "Living",
        "qualified": "a Living"
      }
    ],
    "person": {
      "desc": null,
      "key": "E-1",
      "name": "Living",
      "qualified": "a Living"
    },
    "routes": []
  }
}
