src/plugins/snapshots/burrow__plugins__looking__tests__it_looks_in_empty_area.snap
---
source: src/plugins/looking.rs
expression: reply.to_json()?
---
{
  "areaObservation": {
    "area": {
      "desc": null,
      "key": "E-2",
      "name": "Welcome Area"
    },
    "carrying": [],
    "items": [],
    "living": [
      {
        "desc": null,
        "key": "E-1",
        "name": "Living"
      }
    ],
    "person": {
      "desc": null,
      "key": "E-1",
      "name": "Living"
    },
    "routes": []
  }
}
